--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <title>cache-picker</title>
 
-    <link href="css/libs.css" rel="stylesheet">
+    <link href="style/libs.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,7 +21,8 @@
     <script src="script/cache-picker.js"></script>
 </head>
 
-<body>
+<body onload="CachePicker.main()">
+  
 </body>
 
 </html>
