--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>cache-picker</title>
 
-  <link href="style/libs.css" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="style/libs.css" />
+  <link type="text/css" rel="stylesheet" href="style/cache-picker.css" media="screen,projection" />
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,12 +18,13 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-  <script src="script/libs.js"></script>
-  <script src="script/cache-picker.js"></script>
 </head>
 
-<body onload="CachePicker.main()">
+<body>
   <div id="main"></div>
+
+  <!--<script src="script/libs.js"></script>-->
+  <script src="script/cache-picker.js"></script>
 </body>
 
 </html>
