Build chain is working like a charm. Let's start hacking

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
 
   <title>cache-picker</title>
 
-  <link type="text/css" rel="stylesheet" href="style/libs.css" />
-  <link type="text/css" rel="stylesheet" href="style/cache-picker.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="style/material-design-icons.css" />
+  <link type="text/css" rel="stylesheet" href="style/materialize.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="style/cache-picker.css" />
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,7 +24,8 @@
 <body>
   <div id="main"></div>
 
-  <!--<script src="script/libs.js"></script>-->
+  <script src="script/jquery.min.js"></script>
+  <script src="script/materialize.min.js"></script>
   <script src="script/cache-picker.js"></script>
 </body>
 
