Renamed cache-picker to cache-cracker

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>cache-picker</title>
+  <title>cache-cracker</title>
 
   <link type="text/css" rel="stylesheet" href="style/material-design-icons.css" />
   <link type="text/css" rel="stylesheet" href="style/materialize.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="style/cache-picker.css" />
+  <link type="text/css" rel="stylesheet" href="style/cache-cracker.css" />
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,7 +26,7 @@
 
   <script src="script/jquery.min.js"></script>
   <script src="script/materialize.min.js"></script>
-  <script src="script/cache-picker.js"></script>
+  <script src="script/cache-cracker.js"></script>
 </body>
 
 </html>
